# Emulator

./: CMakeLists.txt  code.asm
include/: CommandCollection.cpp  CommandCollection.hpp  CommandComparator.hpp  Emulator.hpp  IEmulator.hpp
src/: CommandCollection.cpp  CommandComparator.cpp  Emulator.cpp  main.cpp
